# Build-with-Bombs

./: .gitattributes  .gitignore  README.md  gradle.properties
inference_dll/: CMakeLists.txt  inference_main.cpp  linux_install_steps.txt
inference_dll/build_linux/: build_linux.sh  tensorrt_install_steps.txt
inference_dll/build_windows/: inference.vcxproj
inference_dll/visual_studio_build/: inference.sln  inference.vcxproj
mod_neoforge/: build.gradle  gradle.properties
mod_neoforge/native_libraries/: README.txt
mod_neoforge/src/main/java/com/buildwithbombs/: BuildWithBombs.java  Inference.java
mod_neoforge/src/main/java/com/buildwithbombs/mixins/: CreeperMixin.java  EndPortalBlockMixin.java
mod_neoforge/src/main/java/net/tbarnes/diffusionmod/: Config.java  DiffusionMod.java  Inference.java
mod_neoforge/src/main/java/tbarnes/diffusionmod/: Config.java  DiffusionMod.java  Inference.java
mod_neoforge/src/resources/: buildwithbombs.mixins.json
src/main/java/net/tbarnes/diffusionmod/: DiffusionMod.java
